--- a/dashboard.html
+++ b/dashboard.html
@@ -9,9 +9,22 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
     <script>
-      const { ipcRenderer } = require('electron')
+      document.addEventListener('DOMContentLoaded', () => {
+        const role = localStorage.getItem('role')
+        // Affiche/masque les menus selon le rôle
+        if (role === 'employe') {
+          document.getElementById('menu-tresorerie').style.display = 'none'
+          document.getElementById('menu-parametres').style.display = 'none'
+        }
+
+        const username = localStorage.getItem('username')
+        console.log('username:', username)
+        if (username) {
+          document.getElementById('user-info').textContent = username
+        }
+      })
       function navigate(page) {
-        ipcRenderer.send('navigate', page)
+        window.api.navigate(page)
       }
     </script>
   </head>
@@ -28,7 +41,7 @@
         </div>
         <!-- Menu -->
         <ul class="flex-1 space-y-2">
-          <li class="bg-gray-900 rounded-l-full">
+          <li class="bg-gray-900 rounded-l-full" id="menu-dashboard">
             <a
               href="#"
               onclick="navigate('dashboard')"
@@ -37,7 +50,7 @@
               <i class="fa fa-home mr-3"></i> Tableau de bord
             </a>
           </li>
-          <li>
+          <li id="menu-tresorerie">
             <a
               href="#"
               onclick="navigate('tresorerie')"
@@ -46,7 +59,7 @@
               <i class="fa fa-wallet mr-3"></i> Trésorerie
             </a>
           </li>
-          <li>
+          <li id="menu-clients">
             <a
               href="#"
               onclick="navigate('clients')"
@@ -55,7 +68,7 @@
               <i class="fa fa-users mr-3"></i> Clients
             </a>
           </li>
-          <li>
+          <li id="menu-commandes">
             <a
               href="#"
               onclick="navigate('commandes')"
@@ -64,7 +77,7 @@
               <i class="fa fa-shopping-basket mr-3"></i> Commandes
             </a>
           </li>
-          <li>
+          <li id="menu-articles">
             <a
               href="#"
               onclick="navigate('articles')"
@@ -73,7 +86,7 @@
               <i class="fa fa-tasks mr-3"></i> Articles
             </a>
           </li>
-          <li>
+          <li id="menu-parametres">
             <a
               href="#"
               onclick="navigate('parametres')"
@@ -88,12 +101,13 @@
       <div class="flex-1 ml-56">
         <!-- Header -->
         <header
-          class="h-16 bg-blue-600 flex items-center px-8 shadow text-white fixed w-full z-10"
+          class="h-16 bg-blue-600 flex items-center px-8 shadow text-white fixed w-full z-10 justify-between"
           style="left: 14rem"
         >
-          <span class="text-lg font-semibold"
-            >Tableau de bord - Gestion du Pressing</span
-          >
+          <span class="text-lg font-semibold">
+            Tableau de bord - Gestion du Pressing
+          </span>
+          <span id="user-info" class="ml-auto font-semibold"></span>
         </header>
         <!-- Content -->
         <main class="pt-24 px-8">
