--- a/login.html
+++ b/login.html
@@ -1,37 +1,58 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8" />
-  <title>Connexion - Pressing</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    const { ipcRenderer } = require('electron');
-    function login(event) {
-      event.preventDefault();
-      // Ici, tu peux ajouter une vraie vérification
-      const user = document.getElementById('user').value;
-      const pass = document.getElementById('pass').value;
-      if (user === 'admin' && pass === 'admin') {
-        ipcRenderer.send('login-success');
-      } else {
-        document.getElementById('error').textContent = "Identifiants incorrects";
+  <head>
+    <meta charset="UTF-8" />
+    <title>Connexion - Pressing</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      async function login(event) {
+        event.preventDefault()
+        const user = document.getElementById('user').value
+        const pass = document.getElementById('pass').value
+        const result = await window.api.login(user, pass)
+        if (result.success) {
+          localStorage.setItem('role', result.role)
+          localStorage.setItem('username', user)
+          window.location = 'dashboard.html'
+        } else {
+          document.getElementById('error').textContent = result.error
+        }
       }
-    }
-  </script>
-</head>
-<body class="bg-gray-100 min-h-screen flex items-center justify-center">
-  <form class="bg-white rounded-lg shadow-lg p-8 w-full max-w-sm" onsubmit="login(event)">
-    <h2 class="text-2xl font-bold text-blue-600 mb-6 text-center">Connexion</h2>
-    <div id="error" class="text-red-600 mb-4 text-center"></div>
-    <div class="mb-4">
-      <label class="block text-gray-700 mb-1">Utilisateur</label>
-      <input id="user" type="text" class="w-full border rounded px-3 py-2" required />
-    </div>
-    <div class="mb-6">
-      <label class="block text-gray-700 mb-1">Mot de passe</label>
-      <input id="pass" type="password" class="w-full border rounded px-3 py-2" required />
-    </div>
-    <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">Se connecter</button>
-  </form>
-</body>
+    </script>
+  </head>
+  <body class="bg-gray-100 min-h-screen flex items-center justify-center">
+    <form
+      class="bg-white rounded-lg shadow-lg p-8 w-full max-w-sm"
+      onsubmit="login(event)"
+    >
+      <h2 class="text-2xl font-bold text-blue-600 mb-6 text-center">
+        Connexion
+      </h2>
+      <div id="error" class="text-red-600 mb-4 text-center"></div>
+      <div class="mb-4">
+        <label class="block text-gray-700 mb-1">Utilisateur</label>
+        <input
+          id="user"
+          type="text"
+          class="w-full border rounded px-3 py-2"
+          required
+        />
+      </div>
+      <div class="mb-6">
+        <label class="block text-gray-700 mb-1">Mot de passe</label>
+        <input
+          id="pass"
+          type="password"
+          class="w-full border rounded px-3 py-2"
+          required
+        />
+      </div>
+      <button
+        type="submit"
+        class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700"
+      >
+        Se connecter
+      </button>
+    </form>
+  </body>
 </html>
